Upgrade to Java 17 to match Solr 9